# bilby_tgr

./: .gitlab-ci.yml  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
bilby_tgr/: __init__.py
bilby_tgr/asimov/: __init__.py  tgrflow.py  utils.py
bilby_tgr/mdr/: __init__.py
bilby_tgr/mdr/asimov/: __init__.py  analysis_defaults.yaml  bilbyMDR.py  bilbymdr.ini  flowutils.py  mdr-analysis.yaml
bilby_tgr/tiger/: source.py
examples/GW170814/: GW170814_dchi0.ini
src/: source.py
tests/: source_test.py
tests/asimov/: bilby_config_to_asimov_test.py  config_prior_dict.ini  ledger_prior_dict.json
tests/mdr/: mdr_conversion_test.py  mdr_flowutils.py
tests/tiger/: tiger_source_test.py
