[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "bilby_tgr"
description = "Testing GR analysis pipelines to use with Bilby"
authors = [
        {name = "Gregory Ashton", email = "gregory.ashton@ligo.org"},
        {name = "Colm Talbot"},
        {name = "Geraint Pratten"},
        {name = "Tsun-Ho Pang"},
        {name = "Michalis Agathos", email = "michalis.agathos@ligo.org"},
        {name = "Tomasz Baka"},
	{name = "Elisa Maggio"},
	{name = "Abhirup Ghosh"}
        ]
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT" }
version = "0.0.3"
dependencies = [
    "bilby",
    "lalsuite",
    "numpy>=1.17"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools_scm]
write_to = "bilby_tgr/_version.py"
