[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W503 W504 E203 E402

[metadata]
name = bilby_tgr
license = MIT

[isort]
known_third_party = astropy,attr,bilby,deepdish,gwin,gwinc,gwpy,lal,lalsimulation,matplotlib,mock,nflows,numpy,packaging,pandas,past,pycbc,pymc3,pytest,scipy,setuptools,skimage,torch

[options]
packages =
         bilby_tgr
         bilby_tgr.tiger
         bilby_tgr.mdr
         bilby_tgr.siqm
